--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/CenaFlix
 excludes=
 file.reference.mysql-connector-j-9.2.0.jar=..\\..\\..\\Downloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.2.0.jar-1=..\\..\\Downloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.3.0.jar=C:\\Users\\emers\\Downloads\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar-1}
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=CenaFlix
-main.class=cenaflix.CenaFlix
+main.class=cineColonia.CineColonia
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
