refactor: perfomance code

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CenaFlix.jar
+dist.jar=${dist.dir}/CineColonia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CenaFlix
+dist.jlink.output=${dist.jlink.dir}/CineColonia
 excludes=
 file.reference.mysql-connector-j-9.2.0.jar=..\\..\\..\\Downloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.2.0.jar-1=..\\..\\Downloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CenaFlix
+jlink.launcher.name=CineColonia
 main.class=cineColonia.CineColonia
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
