--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,10 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\emers\\Downloads\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-1=C:\\Users\\emers\\Downloads\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\emers\\AppData\\Roaming\\NetBeans\\27\\build.properties
